--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,10 @@ a[rel="show-code"]:before {
   -moz-box-sizing: border-box;
 }
 
+.fb-like {
+  display: inline-block;
+}
+
 #chart {
   height: 500px;
 
