--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ a[rel="show-code"]:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box; }
 
+.fb-like {
+  display: inline-block; }
+
 #chart {
   height: 500px; }
   #chart svg {
