--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ a[rel="show-code"]:before {
 .fb-like {
   display: inline-block; }
 
+#instructions iframe {
+  position: relative;
+  top: 3px;
+  left: 5px; }
+
 #chart {
   height: 500px; }
   #chart svg {
