--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,7 @@ a[rel="show-code"]:before {
 }
 
 #instructions {
-  iframe {
+  iframe.twitter-share-button {
     position: relative;
     top: 3px;
     left: 5px;
