--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ body {
 .discussion h2 {
   margin-top: 40px; }
 
+footer #fork {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 0; }
+
 a[rel="show-code"]:before {
   content: attr(data-content); }
 
