--- a/style.css
+++ b/style.css
@@ -60,10 +60,16 @@ a[rel="show-code"]:before {
   height: 500px; }
   #chart svg {
     background: #eeeeff; }
+  #chart .legend text {
+    text-anchor: start; }
   #chart text {
     font-family: 'helvetica';
     font-size: 12px;
     text-anchor: middle; }
+  #chart .instantiation {
+    fill: #FF69B4; }
+  #chart .constructor {
+    fill: #0066FF; }
   #chart .object {
     fill: #44DD00; }
   #chart .function {
