--- a/style.css
+++ b/style.css
@@ -68,12 +68,28 @@ a[rel="show-code"]:before {
     text-anchor: middle; }
   #chart .instantiation {
     fill: #FF69B4; }
+    #chart .instantiation .ring {
+      fill: none;
+      stroke: #FF69B4;
+      stroke-width: 1px; }
   #chart .constructor {
     fill: #0066FF; }
+    #chart .constructor .ring {
+      fill: none;
+      stroke: #0066FF;
+      stroke-width: 1px; }
   #chart .object {
     fill: #44DD00; }
+    #chart .object .ring {
+      fill: none;
+      stroke: #44DD00;
+      stroke-width: 1px; }
   #chart .function {
     fill: #FF6600; }
+    #chart .function .ring {
+      fill: none;
+      stroke: #FF6600;
+      stroke-width: 1px; }
   #chart line.link {
     stroke: #ccc; }
 
